--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'net.minecraftforge.gradle' version '5.1.+'
 }
 
-version = '0.0.1-1.19'
+version = '1.19.3 - 1.5'
 group = 'net.grinner117.grinnersmobs'
 archivesBaseName = 'grinnersmobs'
 
